# test_image_ppm

./: .gitignore  CMakeLists.txt  README.md  build.sh  gen_ppm.cpp  pipeline.cpp  test.sh
test/: .input_ok_1.ppm.swp  input_fail_1.ppm  input_fail_3.ppm  input_fail_4.ppm  input_ok_0.ppm  input_ok_1.ppm  input_ok_2.ppm  input_ok_3.ppm  input_ok_4.ppm
test_input/: .input_fail_1.ppm.swp  input_fail_0.ppm  input_fail_1.ppm  input_fail_2.ppm  input_fail_3.ppm  input_ok_0.ppm  input_ok_1.ppm
